fix filter popup z-index

--- a/src/components/filterPopUp/FilterPopUp.module.css
+++ b/src/components/filterPopUp/FilterPopUp.module.css
@@ -7,6 +7,7 @@
   height: 100%;
   margin: 0;
   overflow: hidden;
+  z-index: 10;
 }
 
 .popupBackground {
